--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -177,9 +177,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e2cb3f0",
+   "metadata": {},
+   "source": [
+    "Download data from gdrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "76d83057",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import gdown\n",
+    "url=\"https://drive.google.com/file/d/1hMsXd5m_7Ph_Hw2ke8E2dp9w1VExvGMQ/view?usp=sharing\"\n",
+    "type(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "47a1964c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https:',\n",
+       " '',\n",
+       " 'drive.google.com',\n",
+       " 'file',\n",
+       " 'd',\n",
+       " '1hMsXd5m_7Ph_Hw2ke8E2dp9w1VExvGMQ',\n",
+       " 'view?usp=sharing']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url.split(\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4915936e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1hMsXd5m_7Ph_Hw2ke8E2dp9w1VExvGMQ'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id=url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7c4cc498",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1hMsXd5m_7Ph_Hw2ke8E2dp9w1VExvGMQ\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1hMsXd5m_7Ph_Hw2ke8E2dp9w1VExvGMQ&confirm=t&uuid=faea073d-ac76-448c-8489-a2d430e744cf\n",
+      "To: c:\\Users\\User\\Music\\DL_Project\\research\\data.zip\n",
+      "100%|██████████| 49.0M/49.0M [01:17<00:00, 635kB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'data.zip'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix=\"https://drive.google.com/uc?/export=download&id=\"\n",
+    "gdown.download(prefix+file_id,\"data.zip\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d83057",
+   "id": "d80965be",
    "metadata": {},
    "outputs": [],
    "source": []
